tests/NormalTests/paczka1/fuzzy1/24545210.err
Error in line 3: 6ROWO2h04QY S239 150,20
Error in line 2: 6ROWO2h04QY S239 31,0
Error in line 15: lfhclY4 A283 26,8
Error in line 10: S239 A283 7,9
Error in line 20: S239 S75 87,5
Error in line 25: S239 S239 -1,6
Error in line 12: A92aB S75 17,4
Error in line 30: 10lGiGeWL S219 44,7
Error in line 35: 10lGiGeWL S75 31,6
Error in line 34: 6ROWO2h04QY A283 86,2
Error in line 37: 10lGiGeWL S239 89,0
Error in line 38: 6ROWO2h04QY S75 9,8
